stretch images in sidebar to new width of 340px (temp fix)

--- a/sites/all/themes/apl_blanco/sass/highlighted.scss
+++ b/sites/all/themes/apl_blanco/sass/highlighted.scss
@@ -3,6 +3,11 @@ div.view-display-id-panel_pane_1 div.views-field-field-highlighted-image div.fie
 	width: 940px;
 }
 body {
+	div.panel-col-last div.field-content img {
+		width: 340px;
+	}
+
+
 	div.jcarousel-skin-default {
 		a.jcarousel-next-horizontal {
 			background-position: 0 -32px;
